Bug 152698 - Child widgets do not propagate context menu events
Summary: Child widgets do not propagate context menu events
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 153947 155702 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-11-22 11:21 UTC by Joseph Wenninger
Modified: 2008-01-14 02:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
hack to make widget send context menu events upward (1.19 KB, patch)
2007-12-16 13:06 UTC, Jason Stubbs
Details
Take #2 (1.19 KB, patch)
2007-12-16 13:40 UTC, Jason Stubbs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joseph Wenninger 2007-11-22 11:21:26 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

It's not possible to add plasmoids (eg the logout or the pager plasmoid) to the panel. On the other side it is not possible to remove this new ( for me more hindering, than usefull) K-Menu replacement from the panel
Comment 1 Chani 2007-12-11 15:18:50 UTC
it is possible to add things to the panel (although some of them mess up the panel until you restart plasma). it's now possible to remove any applet via the applet browser - although I still consider it a bug that some applets can *only* be removed from there.
Comment 2 Tommi Tervo 2007-12-13 09:01:53 UTC
*** Bug 153947 has been marked as a duplicate of this bug. ***
Comment 3 András Manţia 2007-12-15 18:22:59 UTC
If you added the same applet twice somewhere and you remove it from the applet browser, it will be removed from both places. I doubt this is the intended behavior or if it is, there is a definite need for a way to remove the applet from where you want it.
Comment 4 Chani 2007-12-15 19:04:36 UTC
andras: that is the intended behaviour; 'remove all'. I think it's better than removing one at random, until someone comes up with a UI that makes it possible to choose what to remove. I was hoping people wouldn't find it so confusing.
Comment 5 Jason Stubbs 2007-12-16 07:49:48 UTC
Marking as a wish because plasma is new software rather than a kde4 port of kicker & friends.

Adding widgets to the panel works now (the panel breaking has its own bug).
Comment 6 Jason Stubbs 2007-12-16 12:36:28 UTC
There is a unified way for removing applets already but for some reason applets that have embedded Plasma::Widgets don't propagate the context menu events.
Comment 7 Jason Stubbs 2007-12-16 13:06:54 UTC
Created attachment 22573 [details]
hack to make widget send context menu events upward

Qt's documentation says that context menu events are propagated to the parent,
but there's no such logic in the code itself. This really needs to be fixed
upstream, but this hack works around it for everything but the system tray and
shouldn't cause problems even after it is fixed upstream.
Comment 8 Jason Stubbs 2007-12-16 13:40:06 UTC
Created attachment 22575 [details]
Take #2

I was hoping to make it easy to add any other events that need to be
propagated, but it wasn't to be (aka it didn't work properly). This patch works
properly. ;)
Comment 9 Jason Stubbs 2007-12-16 14:21:38 UTC
SVN commit 749078 by jstubbs:

Move the "call the parent's contextMenuEvent()" hack from Applet into
Widget so that applets with embedded widgets also get the containment's
context menu.

BUG: 152698


 M  +0 -21     applet.cpp  
 M  +0 -5      applet.h  
 M  +10 -0     widgets/widget.cpp  
 M  +6 -0      widgets/widget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=749078
Comment 10 jorge salgueiro 2007-12-17 11:30:08 UTC
15 Dec 2007 18:04:36 -0000, Chani <chanika@gmail.com>:
[bugs.kde.org quoted mail]

It wouldn't be better just to grab and paste the plasmoids to add/remove off
the panel?

<br><br><div><span class="gmail_quote">15 Dec 2007 18:04:36 -0000, Chani &lt;<a href="mailto:chanika@gmail.com">chanika@gmail.com</a>&gt;:</span><blockquote class="gmail_quote" style="border-left: 1px solid rgb(204, 204, 204); margin: 0pt 0pt 0pt 0.8ex; padding-left: 1ex;">
------- You are receiving this mail because: -------<br>You are the assignee for the bug, or are watching the assignee.<br><br><a href="http://bugs.kde.org/show_bug.cgi?id=152698">http://bugs.kde.org/show_bug.cgi?id=152698
</a><br><br><br><br><br>------- Additional Comments From chanika gmail com&nbsp;&nbsp;2007-12-15 19:04 -------<br>andras: that is the intended behaviour; &#39;remove all&#39;. I think it&#39;s better than removing one at random, until someone comes up with a UI that makes it possible to choose what to remove. I was hoping people wouldn&#39;t find it so confusing.
<br>_______________________________________________<br>Panel-devel mailing list<br><a href="mailto:Panel-devel@kde.org">Panel-devel@kde.org</a><br><a href="https://mail.kde.org/mailman/listinfo/panel-devel">https://mail.kde.org/mailman/listinfo/panel-devel
</a><br></blockquote></div><br>It wouldn&#39;t be better just to grab and paste the plasmoids to add/remove off the panel?<br clear="all"><br>-- <br><br>Um abra
Comment 11 Jason Stubbs 2007-12-17 12:59:31 UTC
Dragging off the panel will probably come with the ability to drag around the panel (which has a bug). All applets should be removable from the panel by right-clicking and selecting "remove.." and adding to the panel should be possible by dragging them from "Add widgets". The panel might break when you add/remove widgets but there's a bug open for that too.
Comment 12 George Goldberg 2008-01-14 02:22:02 UTC
*** Bug 155702 has been marked as a duplicate of this bug. ***