Move the "call the parent's contextMenuEvent()" hack from Applet into Widget so that applets with embedded widgets also get the containment's context menu.

BUG: 152698

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=749078